--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "author": "Paul Serby <paul@serby.net>",
   "name": "compact",
-  "description": "A JavaScript and CSS compacting middleware for express",
-  "version": "0.0.3",
+  "description": "A JavaScript compacting middleware for express",
+  "version": "0.0.4",
   "repository": {
     "type": "git",
     "url": "git://github.com/serby/compact.git"
