--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Paul Serby <paul@serby.net>",
   "name": "compact",
   "description": "A JavaScript compacting middleware for express",
-  "version": "0.0.7",
+  "version": "0.1.0",
   "repository": {
     "type": "git",
     "url": "git://github.com/serby/compact.git"
@@ -12,12 +12,12 @@
     "test": "mocha -r should -R spec"
   },
   "engines": {
-    "node": ">=0.4 <0.7"
+    "node": ">=0.6"
   },
   "dependencies": {
-    "underscore": "~1.3",
+    "lodash": "~0.3",
     "async": "~0.1",
-    "uglify-js": "~1.2",
+    "uglify-js": "~1.3",
     "mkdirp": "~0.3"
   },
   "devDependencies": {
