--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Paul Serby <paul@serby.net>",
   "name": "compact",
   "description": "A JavaScript compacting middleware for express",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "repository": {
     "type": "git",
     "url": "git://github.com/serby/compact.git"
@@ -12,7 +12,7 @@
     "test": "mocha -r should -R spec"
   },
   "engines": {
-    "node": ">=0.6"
+    "node": ">=0.8"
   },
   "dependencies": {
     "lodash": "~0.3",
@@ -22,7 +22,7 @@
   },
   "devDependencies": {
     "mocha": "*",
-    "should": ">=0.6",
+    "should": "~1.1",
     "async": "~0.1",
     "asyncjs": "~0.0"
   }
