Update modules, add prettier and eslint (#29)
* Update modules to the newest version and make tests compatable

* Add eslint and prettier

* Prettify

* Fix eslint errors

--- a/package.json
+++ b/package.json
@@ -9,21 +9,33 @@
   },
   "main": "./lib/compact.js",
   "scripts": {
+    "lint": "eslint -f unix .",
+    "prettier": "prettier --write '**/*.js'",
     "test": "mocha -r should -R spec"
   },
   "engines": {
     "node": ">=0.8"
   },
   "dependencies": {
-    "lodash": "~0.3",
-    "async": "~0.1",
-    "uglify-js": "~1.3",
-    "mkdirp": "~0.3"
+    "async": "^3.1.0",
+    "lodash": "^4.17.15",
+    "mkdirp": "^0.5.1",
+    "uglify-js": "~1.3.5"
   },
   "devDependencies": {
-    "mocha": "*",
-    "should": "~1.1",
-    "async": "~0.1",
-    "asyncjs": "~0.0"
+    "async": "^3.1.0",
+    "asyncjs": "^0.0.13",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-config-prettier-standard": "^3.0.1",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "mocha": "^6.2.0",
+    "prettier": "^1.18.2",
+    "should": "^13.2.3"
   }
 }
